--- a/LeetCode 30 Days Challenge.ipynb
+++ b/LeetCode 30 Days Challenge.ipynb
@@ -1584,6 +1584,115 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Minimum Path Sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Given a m x n grid filled with non-negative numbers, find a path from top left to bottom right which minimizes the sum of all numbers along its path.\n",
+    "\n",
+    "Note: You can only move either down or right at any point in time.\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "Input:\n",
+    "[\n",
+    "  [1,3,1],\n",
+    "  [1,5,1],\n",
+    "  [4,2,1]\n",
+    "]\n",
+    "Output: 7\n",
+    "Explanation: Because the path 1→3→1→1→1 minimizes the sum.\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "class Solution(object):\n",
+    "    def minPathSum(self, grid):\n",
+    "        \"\"\"\n",
+    "        :type grid: List[List[int]]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        if not grid:\n",
+    "            return\n",
+    "        m, n = len(grid), len(grid[0])\n",
+    "        \n",
+    "        for i in range(1, n):\n",
+    "            grid[0][i] += grid[0][i-1]\n",
+    "        for i in range(1, m):\n",
+    "            grid[i][0] += grid[i-1][0]\n",
+    "        for i in range(1, m):\n",
+    "            for j in range(1, n):\n",
+    "                grid[i][j] += min(grid[i-1][j], grid[i][j-1])\n",
+    "        return grid[-1][-1]\n",
+    "    \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Search in Rotated Sorted Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "Suppose an array sorted in ascending order is rotated at some pivot unknown to you beforehand.\n",
+    "\n",
+    "(i.e., [0,1,2,4,5,6,7] might become [4,5,6,7,0,1,2]).\n",
+    "\n",
+    "You are given a target value to search. If found in the array return its index, otherwise return -1.\n",
+    "\n",
+    "You may assume no duplicate exists in the array.\n",
+    "\n",
+    "Your algorithm's runtime complexity must be in the order of O(log n).\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: nums = [4,5,6,7,0,1,2], target = 0\n",
+    "Output: 4\n",
+    "Example 2:\n",
+    "\n",
+    "Input: nums = [4,5,6,7,0,1,2], target = 3\n",
+    "Output: -1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
